# notify-run-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  frontend.sh  test-notify.ipynb
deployment/: Dockerfile  build.sh  deploy.yaml
frontend/: .gitignore  build.sh  package-lock.json  package.json
frontend/html-src/: _footer.html  _header.html  index.html
frontend/src/: api.ts  channel.tsx  main.tsx  subscription.ts
frontend/src/quickstart/: create_channel_stage.tsx  quickstart_flow.tsx  subscribe_stage.tsx
frontend/static-src/: service-worker.js
src/: database.rs  logging.rs  main.rs  migrate.rs  model.rs  rate_limiter.rs  server.rs  server_state.rs  vapid.rs
