[package]
name = "notify-run"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
firestore-serde = "0.1.1"
firestore-serde-timestamp = "0.1.0"
serde = { version = "1.0.130", features = ["derive"] }
clap = "3.0.0-beta.5"
serde_json = "1.0.68"
anyhow = "1.0.44"
tiny-firestore-odm = "0.2.6"
google-authz = "0.0.2"
tokio = { version = "1.12.0", features = ["rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
tracing-stackdriver = "0.2.0"
axum = { version = "0.2.8", features = ["headers"] }
deadpool = { version = "0.9.0", features = ["managed"] }
async-trait = "0.1.51"
headers = "0.3.5"
tower-http = { version = "0.1.1", features = ["fs", "trace"] }
qrcode = "0.12.0"
tokio-stream = "0.1.7"
